<resources>
    <string name="app_name">Android Abschluss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_favorite">Favorite</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_home">Home</string>
    <string name="e5">E5</string>
    <string name="e10">E10</string>
    <string name="diesel">Diesel</string>
    <string name="back_button">􁉉</string>
    <string name="set_as_favourite">Als Favorit markieren</string>
    <string name="fuel_finder">Fuel Finder</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="rad">Radius</string>
    <string name="logout">Logout</string>
    <string name="remove_favorite">Aus Favoriten entfernen</string>
    <string name="navigate_to_station">Zur Tankstelle navigieren</string>
    <string name="sie_haben_noch_keine_favoriten_hinzugef_gt">Sie haben noch keine Favoriten hinzugefügt</string>
    <string name="no_station_found">Keine Tankstellen im eingestellten Radius gefunden</string>
    <string name="filtern_nach">Filtern nach:</string>
</resources>