<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.SignupFragment"
    android:background="@color/black">


    <ImageView
        android:id="@+id/tv_welcome_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:src="@drawable/station"/>

    <EditText
        android:id="@+id/login_email_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/email"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome_login"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_login" />

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/login_email_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email_edit"
        app:layout_constraintTop_toBottomOf="@+id/login_email_edit" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_password_edit"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/login_password_edit"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_signup_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>