<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeDetailFragment"
    android:background="@color/black">

    <Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/back_button"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/toolbar_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/station"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            />

    </Toolbar>

    <TextView
        android:id="@+id/brand_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_toolbar"
        android:textColor="@color/white"
        android:text=""
        android:textStyle="bold"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/e5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_station"
        android:textColor="@color/white"
        android:text="@string/e5"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/e5_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_station"
        android:textColor="@color/white"
        android:text=""
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/e10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e5"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:text="@string/e10"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/e10_price"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e5" />

    <TextView
        android:id="@+id/diesel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e10"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:text="@string/diesel"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/diesel_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e10"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:text=""
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/station_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/diesel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="124dp"
        android:text="@string/set_as_favourite"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         />

    <Button
        android:id="@+id/navigate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fv_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/navigate_to_station"/>



</androidx.constraintlayout.widget.ConstraintLayout>