<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/station_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/black"
    android:layout_marginBottom="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/station_icon"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/station"
            android:layout_marginTop="15dp"/>


        <TextView
            android:id="@+id/station_brand_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/station_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/e5_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/e5_tv"
            app:layout_constraintStart_toEndOf="@id/station_icon"
            app:layout_constraintEnd_toStartOf="@id/e10_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/e5_tv"
            app:layout_constraintStart_toEndOf="@id/station_icon"
            app:layout_constraintEnd_toStartOf="@id/e10_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/e5_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e5"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/e10_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/e10_tv"
            app:layout_constraintStart_toEndOf="@id/e5_tv"
            app:layout_constraintEnd_toStartOf="@id/diesel_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"/>


        <TextView
            android:id="@+id/e10_tv"
            app:layout_constraintStart_toEndOf="@id/e5_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/diesel_tv"
            app:layout_constraintBottom_toBottomOf="@id/e10_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e10"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25dp"/>


        <TextView
            android:id="@+id/diesel_tv"
            app:layout_constraintStart_toEndOf="@id/e10_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/diesel_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diesel"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/diesel_price"
            app:layout_constraintStart_toEndOf="@id/e10_tv"
            app:layout_constraintTop_toBottomOf="@id/diesel_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>